# ts-highlight-demo

./: Cargo.toml  README.md
src/: main.rs
